Tue Dec 14 12:06:24 1999  Marcel Bosc  <bosc@ceic.com>

	* WordDBCompress.cc : Added compression version checking

Mon Dec 13 21:09:31 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/conf_parser.lxx, htcommon/conf_lexer.cxx:
 	Added #include <string.h> Without it failed to compile
 	on Solaris.
	
Mon Dec 13 16:31:27 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordBitCompress.cc : fixed bug that made compression
	fail on big documents or big number of url's ...

Mon Dec 13 13:49:35 1999  Loic Dachary  <loic@ceic.com>

	* htword/WordKey.h.tmpl: Added *_POSITION macro generation

Mon Dec 13 11:51:50 1999  Marcel Bosc <bosc@ceic.com>

	* htcommon/conf_parser.yxx: fixed several delete that should be delete []

Sun Dec 12 17:14:00 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/conf_lexer.lxx, htcommon/conf_lexer.cxx:
	national symbols are allowed in right part of expressions
	(noted by Marcel Bosc).
	Changed default behavior of flex from print unknown chars
	on stdout to exit with error message.

Sat Dec 11 17:34:03 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htdig/Retriever.cc,htdig/htdig.cc: "exclude_urls","bad_querystr"
	"bad_extensions","valid_extensions","local_default_doc"
	changed for new config.

	* htdig/Server.cc: "server_max_docs","server_wait_time" changed for
	 new config.

	* check for "limit_normalized" moved from Retriever::got_href and
	Retriever::got_redirect to more appropriate Retriever::IsValidUrl

Fri Dec 10 18:05:48 1999 Marcel Bosc   <bosc@ceic.com>

	* htword: checked for failed memory allocations in compression code

Fri Dec 10 18:03:42 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordList,htcommon/HtWordList.cc,htmerge/words.cc: cleaned up WordList::Walk() 
	function, change two occurences of WordList::Walk in htdig files

Fri Dec 10 17:40:22 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordKey.cc (Compare): Fixed bug: compare used to compare chars and not