@@ -14,7 +14,7 @@
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: WordKey.cc,v 1.3.2.4 1999/12/10 16:57:10 bosc Exp $
+// $Id: WordKey.cc,v 1.3.2.5 1999/12/14 13:36:06 loic Exp $
 //
 
 #ifdef HAVE_CONFIG_H
@@ -462,6 +462,11 @@ int WordKey::Merge(const WordKey& other)
   return OK;
 }
 
+//
+// Output ascii string representation of the WordKey
+// Undefined values are shown as <UNDEF>
+// The output may be scrambled if the word contains space or newlines.
+//
 ostream &operator << (ostream &o, const WordKey &key)
 {
   const struct WordKeyInfo& info = word_key_info;
@@ -487,145 +492,109 @@ ostream &operator << (ostream &o, const WordKey &key)
 	      break;
 	  }
       }
-      if(j==0 && key.IsDefinedInSortOrder(j) && !key.IsDefinedWordSuffix())
-      {
-	  o << "<UNDEF>";
+      //
+      // Output virtual word suffix field
+      //
+      if(j==0) {
+	if(key.IsDefinedInSortOrder(j) && !key.IsDefinedWordSuffix()) {
+	  o << "\t<UNDEF>";
+	} else {
+	  o << "\t<DEF>";
+	}
       }
       o << "\t";
   }
   return o;
 }
 
-
-static int
-read_fields(istream &is,int maxn,char *res,int maxres)
-{
-    int i=0;
-    for(int j=0;j<maxn;j++)
-    {
-	char c;
-	for(;;)// skip spaces
-	{
-	    c=is.get();
-	    if(is.eof()){return j;}
-	    if(!isspace(c)){is.putback(c);break;}
-	}
-	if(j!=0 && i<maxres-1){res[i++]=' ';}
-	for(;;i++)// get string into tmp
-	{
-	    c=is.get();
-	    if(is.eof()){res[i]='\0';return j+1;}
-	    if(isspace(c)){is.putback(c);break;}
-	    if(i>=maxres-1)
-	    {cerr << "WordKey operator>>: field :" <<j <<" too long!" <<endl;return j;}
-	    res[i]=c;
-	}
-	res[i]='\0';
-    }
-//      cout << "read_fields: result:" << res << endl;
-    return maxn;
-}
-
-
+//
+// Set a key from an ascii representation
+//
 int
-WordKey::Set(const char *s)
+WordKey::Set(const String& buffer)
 {
-    const int max_tmp=1024;
-    char tmp[max_tmp];
-    Clear();
-    int k=0;
-    int status=0;
-    int j;
-    for(j=0;j<word_key_info.nfields;j++)
-    {
-	// get a string (but check if not too long)
-	//  	replaces: is >> tmp; !!
-	char c;
-	for(;;)// skip spaces
-	{
-	    c=s[k++];
-	    if(c=='\0'){status=1;break;}
-	    if(!isspace(c)){k--;break;}
-	}
-	if(status==1){break;}// premature end
-	int i;
-	for(i=0;;i++)// get string into tmp
-	{
-	    c=s[k++];
-	    if(c=='\0'){status=2;break;}
-	    if(isspace(c)){k--;break;}
-	    if(i>=max_tmp-1)
-	    {cerr << "WordKey::Set(char *): field :" <<j <<" too long!" <<endl;break;}
-	    tmp[i]=c;
-	}
-	tmp[i]='\0';
-	///
-
-	// now parse this field's string
-	if(!strcmp(tmp,"<UNDEF>")){UndefinedInSortOrder(j);}
-	else
-	{
-	    if(j==0)
-	    {// this is the WORD field
-//  		cout << "WordKey::Set(char *): --- word field :|" << tmp << "|" << endl;
-		// check for undefined suffix
-		if(strlen(tmp)>=strlen("<UNDEF>") && 
-		   !strcmp(tmp+strlen(tmp)-strlen("<UNDEF>"),"<UNDEF>"))
-		{		    
-		    // strip <UNDEF> suffix from word
-		    tmp[strlen(tmp)-strlen("<UNDEF>")]='\0';
-		    SetWord(tmp);
-		    UndefinedWordSuffix();
-		}
-		else
-		{SetWord(tmp);}// normal Word
-
-	    }
-	    else
-	    {
-		char *chk;
-		int v=strtol(tmp,&chk,0);
-		if(*tmp=='\0' || *chk!='\0')
-		{// argh this is not a valid numerical field
-		    status=3;
-		    break;
-		}
-		SetInSortOrder(j,v);
-	    }
-	}
-
-	if(status==2)
-	{
-	    if(j<word_key_info.nfields -1)
-	    {// premature end
-		break;
-	    }
-	    else{status=0;}// ok, this was the end anyways
-	}
-    }
-    if(status>2)
-    {
-	cerr << "WordKey::Set(" << s << ") : bad string format: for field: " << j <<  endl;
-	return NOTOK;
-    }
-    return OK;
+  StringList fields(buffer, "\t ");
+  return Set(fields);
 }
 
-
-istream &
-operator >> (istream &is,  WordKey &key)
+//
+// Set a key from list of fields
+//
+int
+WordKey::Set(StringList& fields)
 {
-    const int max_tmp=1024;
-    char tmp[max_tmp];
-    int nr=read_fields(is,word_key_info.nfields,tmp,max_tmp);
-    if(nr != word_key_info.nfields)
-    {
-	// nr==0 might be an end of file while reading WordList...
-	if(nr!=0){cerr << "WordKey::operator >> read failed!:not enough fields" << endl;}
+  const struct WordKeyInfo& info = word_key_info;
+  int length = fields.Count();
+
+  if(length < info.nfields + 1) {
+    cerr << "WordKey::Set: expected at least " << info.nfields << " fields and found " << length << " (ignored) " << endl;
+    return NOTOK;
+  }
+  if(length < 2) {
+    cerr << "WordKey::Set: expected at least two fields in line" << endl;
+    return NOTOK;
+  }
+
+  Clear();
+
+  //
+  // Handle word and its suffix
+  //
+  int i = 0;
+  {
+    //
+    // Get the word
+    //
+    String* word = (String*)fields.Get_First();
+    if(word == 0) {
+      cerr << "WordKey::Set: failed to word " << i << endl;
+      return NOTOK;
     }
+    if(word->nocase_compare("<undef>") == 0)
+      UndefinedWord();
     else
-    if(key.Set(tmp) == NOTOK){cerr << "WordKey::operator >> read failed!" << endl;}
-    return is;
+      SetWord(*word);
+    fields.Remove(word);
+    i++;
+
+    //
+    // Get the word suffix status
+    //
+    String* suffix = (String*)fields.Get_First();
+    if(suffix == 0) {
+      cerr << "WordKey::Set: failed to word suffix " << i << endl;
+      return NOTOK;
+    }
+    if(suffix->nocase_compare("<undef>") == 0)
+      UndefinedWordSuffix();
+    else
+      SetDefinedWordSuffix();
+    fields.Remove(suffix);
+  }
+
+  //
+  // Handle numerical fields
+  //
+  int j;
+  for(j = 1; i < info.nfields; i++, j++) {
+    String* field = (String*)fields.Get_First();
+
+    if(field == 0) {
+      cerr << "WordKey::Set: failed to retrieve field " << i << endl;
+      return NOTOK;
+    }
+    
+    if(field->nocase_compare("<undef>") == 0) {
+      UndefinedInSortOrder(j);
+    } else {
+      unsigned int value = atoi(field->get());
+      SetInSortOrder(j, value);
+    }
+
+    fields.Remove(field);
+  }
+
+  return OK;
 }
 
 void WordKey::Print() const
