@@ -1,3 +1,13 @@
+Tue Dec 14 14:10:28 1999  Loic Dachary  <loic@ceic.com>
+
+	* htword/{WordKey,WordReference,WordRecord}: rework
+	  the input methods (operator >>). Each class now has a Set function
+	  to initialize itself from an ascii description and a Get function
+	  to retrieve an ascii description of the object.
+
+	* htword/WordList: operator >> has a better and cleaner input loop
+	  using StringList and String instead of char*. 
+
 Tue Dec 14 12:06:24 1999  Marcel Bosc  <bosc@ceic.com>
 
 	* WordDBCompress.cc : Added compression version checking
